--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node src/server.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec npx ts-node src/server.ts",
     "lint": "eslint 'src/**/*.ts'"
   },
