--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.21.0"
   }
 }
