--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "start": "vite build && node dist/server.js",
-    "build": "vite build"
+    "build": "vite build",
+    "seed": "tsx src/tasks/seed.ts",
+    "db_test": "tsx src/tasks/dbTest.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "tsx": "^4.20.6",
     "vite": "^7.2.4",
     "vite-plugin-node": "^7.0.0"
   },
