--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,12 @@
   },
   "dependencies": {
     "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongodb": "^6.21.0"
+    "express-session": "^1.18.2",
+    "mongodb": "^6.21.0",
+    "socket.io": "^4.8.1"
   }
 }
