--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mongodb": "^6.21.0",
