set client to use env vars

--- a/example.env
+++ b/example.env
@@ -4,7 +4,7 @@
 
 # Change if hosting publicly
 CLIENT_URL = "http://127.0.0.1:5173"
-SERVER_URL = "http://127.0.0.1:4000"
+VITE_SERVER_URL = "http://127.0.0.1:4000"
 
 # Change if using existing mongodb instance
 MONGODB_URI = "mongodb://db:27017/"
